Crash during query planning for geoNear with multiple 2dsphere indices

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.9, 3.0.1, 3.1.0
    • Affects Version/s: 2.6.3
    • Component/s: Geo, Querying
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Hi,

      We installed Mongo Server 2.6.3 in our staging environment as a three member replica set in Amazon AWS. Around a day after the initial install, one of the Mongo members crashed with attached crash log. We then rolled back to 2.4.9 which we've been using in production since March 2014 without issue.

      Regards,

      Mark Percy

            Assignee:
            David Storch
            Reporter:
            Mark Percy
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: