SERVER-14723 fix crash in plan enumerator affecting some geo near queries

(cherry picked from commit 965cbef869f8b864caaf3bf7705f8bd82c2b81ba)